Added map-reduce op interfaces, lazy tile, streamlined code

--- a/pom.xml
+++ b/pom.xml
@@ -366,6 +366,25 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<packageName>net.imagej.ops</packageName>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<configuration>
+					<organizationName>Board of Regents of the University of
+Wisconsin-Madison, University of Konstanz and Brian Northan.</organizationName>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
